--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/PianoDreamsWebGLNodeJS.loader.js";
+      var loaderUrl = buildUrl + "/PianoDreamsWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PianoDreamsWebGLNodeJS.data",
-        frameworkUrl: buildUrl + "/PianoDreamsWebGLNodeJS.framework.js",
-        codeUrl: buildUrl + "/PianoDreamsWebGLNodeJS.wasm",
+        dataUrl: buildUrl + "/PianoDreamsWebGL.data",
+        frameworkUrl: buildUrl + "/PianoDreamsWebGL.framework.js",
+        codeUrl: buildUrl + "/PianoDreamsWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Kooapps",
         productName: "Piano Dream",
